# ToDolist-Project

./: .gitignore  README.md  alembic.ini  config.py  db_test.py  env.example.  main.py  pyproject.toml  testing.py
alembic/: env.py
alembic/versions/: 042e6b612de8_initial_tables.py
app/: main.py  task.py
app/api/: routers.py
app/api/controller_schemas/requests/: project_request_schema.py  task_request_schema.py  users_request_schema.py
app/api/controller_schemas/responses/: users_response_schema.py
app/api/routers/: __init__.py  project_router.py  task_router.py
app/cli/: console.py
app/commands/: autoclose_overdue.py  scheduler.py
app/db/: __init__.py  base.py  engine.py  session.py  test.py
app/exceptions/: base.py  ‫‪repository_exceptions.py  ‫‪service_exceptions.py
app/models/: project.py  sqlalchemy_project.py  sqlalchemy_task.py  task.py  test_create_tables.py
app/repositories/: project_repository.py  sqlalchemy_project_repository.py  sqlalchemy_task_repository.py  task_repository.py  test_sqlalchemy_repo.py
app/schedule/: tasks_autoclose.py
app/services/: project_service.py  task_service.py
todolist/: project.py  task.py
